[metadata]
name = drugstone-py_wop
version = 0.0.1
author = Ugur Turhan
description = The python package for the https://drugst.one/ platform.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/realugur/drugst.one-py
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = drugstone-py
packages = find:
python_requires = >=3.6

[options.packages.find]
where = drugstone-py