[metadata]
name = drugstone
version = 0.1.0
author = Ugur Turhan
description = The python package for the https://drugst.one/ platform.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/realugur/drugst.one-py
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.6
# install_requires = ["urllib3", "pandas", "pyvis", "upsetplot", "requests"]

[options.packages.find]
where=src
