[metadata]
name = drugstone
version = 1.0.0
author = Ugur Turhan, Michael Hartung
author_email = michael.hartung@uni-hamburg.de
description = The python package for the https://drugst.one/ platform.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/t-ugur/drugstone.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages=find:
python_requires = >=3.6

[options.packages.find]
where=src
